# Dubium0.github.io

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
.github/workflows/: deploy  deploy.yml
scss/: index.scss
scss/base/: _reset.scss  _typography.scss  _variables.scss
scss/components/: _buttons.scss  _cards.scss  _education.scss  _experiences.scss  _hero.scss  _navbar.scss  _skills.scss  _soundcloud_embed.scss  _spotify_embed.scss
scss/effects/: _animated_background.scss
scss/layout/: _footer.scss  _responsive.scss  _sections.scss
scss/themes/: _dark_mode.scss
src/: app.rs  main.rs
src/components/: about.rs  contact.rs  education.rs  education_item.rs  experience_item.rs  experiences.rs  footer.rs  hero.rs  mod.rs  navbar.rs  project_card.rs  projects.rs  skills.rs  soundcloud_embed.rs  spotify_embed.rs
src/hooks/: mod.rs  use_cross_fade_item.rs  use_loader.rs  use_random_interval_item.rs  use_theme.rs
