[package]
name = "web-portfolio"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.21", features=["csr"] }
wasm-bindgen = "0.2"
# Add web-sys with specific features needed
web-sys = { version = "0.3", features = [
    'Storage',
    'Window',
    'Document',
    'Element',
    'HtmlElement',
    'DomTokenList',
    'MediaQueryList',        # To detect OS preference
    'MediaQueryListEvent',   # To listen for OS preference changes
]}
gloo-storage = "0.3" # Simplified localStorage access
gloo-events = "0.2"  # For listening to media query changes
gloo-timers = { version = "0.3", features = ["futures"] } # Add this line
yew-hooks = "0.3"