# Cargo.toml

[package]
name = "my-yew-portfolio" # Or your actual package name
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21" }
yew-hooks = "0.3"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-utils = "0.2"
gloo-events = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # For async operations in WASM

# web-sys - Keep basic features, wgpu might need some
web-sys = { version = "0.3", features = [
    'Window',
    'Document',
    'Element',
    'HtmlElement',
    'Storage',          # Needed for theme persistence (gloo-storage)
    'MediaQueryList',   # Needed for theme OS preference (use_theme)
    'MediaQueryListEvent',# Needed for theme OS preference (use_theme)
    'DomTokenList',     # Needed for theme class manipulation (use_theme)
    'MouseEvent',
    'Performance',
    'console',

]}
rand = "0.8"
# Logging
log = "0.4"
wasm-logger = "0.2"


[profile.release]
opt-level = "s"
lto = true
